--- a/src/brixit/static/style.css
+++ b/src/brixit/static/style.css
@@ -2,7 +2,7 @@ html { font-family: sans-serif; background: #eee; padding: 1rem; }
 body { max-width: 960px; margin: 0 auto; background: white; }
 h1 { font-family: sans-serif; color: #377ba8; margin: 1rem 0; }
 a { color: #377ba8; }
-hr { border: none; border-top: 1px solid lightgray; }
+hr { border-top: 1px solid lightgray; }
 nav { background: darkgray; display: flex; align-items: center; padding: 0 0.5rem; }
 nav h1 { flex: auto; margin: 0; }
 nav h1 a { text-decoration: none; padding: 0.25rem 0.5rem; }
@@ -18,7 +18,7 @@ nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
 .post .about { color: slategray; font-style: italic; }
 .post .body { white-space: pre-line; }
 .content:last-child { margin-bottom: 0; }
-.content form { margin: 1em 0; display: flex; flex-direction: column; }
+.content form { margin: 1em 0; display: flex; flex-direction: row; }
 .content label { font-weight: bold; margin-bottom: 0.5em; }
 .content input, .content textarea { margin-bottom: 1em; }
 .content textarea { min-height: 12em; resize: vertical; }
