--- a/src/brixit/templates/base.html
+++ b/src/brixit/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - BriXit</title>
 
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 <nav>
   <h1>BriXit</h1>
