--- a/src/brixit/templates/labelling/labelling.html
+++ b/src/brixit/templates/labelling/labelling.html
@@ -4,7 +4,7 @@
 <body>
     {% if images %}
       {% for image in images %}
-        <img src="{{ url_for('sorting.GetUnknownImage', filename=image) }}">
+        <img src="{{ url_for('labelling.GetUnknownImage', filename=image) }}">
       {% endfor %}
     {% else %}
     <p>Could not find parts!</p>
@@ -16,9 +16,9 @@
         <input type="submit" value="Search">
     </form>
     <hr>
-    <form method="post"><input type="submit" value="Picture Of Conveyor belt"><input type="hidden" id="badImage" name="badImage" value="conveyor"><input type="hidden" id="images" name="realImage" value="{{images}}"></form>
-    <form method="post"><input type="submit" value="Bad Picture(s)"><input type="hidden" id="badImage" name="badImage" value="badImages"><input type="hidden" id="images" name="realImage" value="{{images}}"></form>
-        <form method="post"><input type="submit" value="Skip Part"><input type="hidden" id="badImage" name="badImage" value="skip"><input type="hidden" id="images" name="realImage" value="{{images}}"></form>
+    <form method="post"><input type="submit" value="Picture Of Conveyor belt"><input type="hidden" name="problem" value="conveyor"><input type="hidden" name="puid" value="{{puid}}"></form>
+    <form method="post"><input type="submit" value="Bad Picture(s)"><input type="hidden" name="problem" value="badImages"><input type="hidden" name="puid" value="{{puid}}"></form>
+        <form method="post"><input type="submit" value="Skip Part"><input type="hidden" name="problem" value="skip"><input type="hidden" name="puid" value="{{puid}}"></form>
     <form method="post">
         <!-- The values names submitted in the form must match the variable names in a Part object -->
         <input type="submit" value="Submit">
