--- a/src/brixit/templates/auth/register.html
+++ b/src/brixit/templates/auth/register.html
@@ -10,6 +10,8 @@
     <input name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
+    <label for="serialKey">Serial Key</label>
+    <input name="serialKey" id="serialKey" required>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
