--- a/src/brixit/templates/labelling/labelling.html
+++ b/src/brixit/templates/labelling/labelling.html
@@ -19,6 +19,17 @@
         <input name="query" id="query" value="" required>
         <input type="submit" value="Search">
     </form>
+    <input
+      type="checkbox"
+      id="toggle_testSection"
+      class="toggle_collapse"
+      hidden
+      aria-hidden="true">
+    <div>
+      <p class="collapseAfter"></p>
+      <p>*ADD HELP HERE*</p>
+    </div>
+    <label for="toggle_testSection" hidden aria-hidden="true"></label>
 
     <hr>
 
