--- a/src/brixit/templates/labelling/labelling.html
+++ b/src/brixit/templates/labelling/labelling.html
@@ -27,10 +27,9 @@
       aria-hidden="true">
     <div>
       <p class="collapseAfter"></p>
-      <p>*ADD HELP HERE*</p>
+        <p>{%include "help.html" %}</p>
     </div>
     <label for="toggle_testSection" hidden aria-hidden="true"></label>
-
     <hr>
 
     <!--  Picture of conveyor Button  -->
