--- a/src/brixit/templates/base.html
+++ b/src/brixit/templates/base.html
@@ -16,7 +16,7 @@
   </ul>
 </nav>
 
-<section class="content">
+<section class="content {% block extendcontentclass %}{% endblock %}">
   <header>
     {% block header %}{% endblock %}
   </header>
