--- a/src/brixit/templates/auth/login.html
+++ b/src/brixit/templates/auth/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block extendcontentclass %}container{% endblock %}
+
 {% block header %}
   <h1>{% block title %}Log In{% endblock %}</h1>
 {% endblock %}
@@ -7,7 +9,7 @@
 {% block content %}
   <form method="post">
     <label for="username">Username</label>
-    <input name="username" id="username" required>
+    <input type="text" name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
     <input type="submit" value="Log In">
