--- a/src/brixit/templates/labelling/labelling.html
+++ b/src/brixit/templates/labelling/labelling.html
@@ -6,7 +6,9 @@
     <!--  Images of parts  -->
     {% if images %}
       {% for image in images %}
+      <div class="main">
         <img src="{{ url_for('labelling.GetUnknownImage', filename=image) }}">
+    </div>
       {% endfor %}
     {% else %}
     <p>Could not find parts!</p>
@@ -16,7 +18,7 @@
     <!--  Search Button  -->
     <form method="post">
         <label for="query">Search for a part:</label>
-        <input name="query" id="query" value="" required>
+        <input type="search" name="query" id="query" value="" required>
         <input type="submit" value="Search">
     </form>
     <input
@@ -31,7 +33,7 @@
     </div>
     <label for="toggle_testSection" hidden aria-hidden="true"></label>
     <hr>
-
+<div class="actions">
     <!--  Picture of conveyor Button  -->
     <form method="post">
         <input type="submit" value="Picture Of Conveyor belt">
@@ -55,7 +57,7 @@
         <input type="hidden" name="puid" value="{{puid}}">
         <input type="hidden" name="images" value="{{images}}">
     </form>
-
+</div>
     <!--  Search result form  -->
     <form method="post">
         <!-- The values names submitted in the form must match the variable names in a Part object -->
