button spacing, search result spacing, larger font size

--- a/src/brixit/templates/labelling/labelling.html
+++ b/src/brixit/templates/labelling/labelling.html
@@ -52,7 +52,7 @@
         </form>
     </div>
     <!--  Search result form  -->
-    <form method="post">
+    <form method="post" class="search-results">
         <!-- The values names submitted in the form must match the variable names in a Part object -->
         <input type="submit" value="Submit">
         {% for result in results %}
