--- a/src/brixit/static/css/base.css
+++ b/src/brixit/static/css/base.css
@@ -7,11 +7,12 @@
 	--black: rgb(49, 49, 49);
   --blue: rgb(107,150,179);
   --red: rgb(204,47,46);
+  --white: white;
 
   --rgb-black: 49,49,49;
   --border-color: var(--grey);
 
-	--base-font-size: 18px;
+	--base-font-size: 30px;
 	/* --h1-font-size: */
 
 }
@@ -19,7 +20,7 @@
 /* BASE STYLES */
 html {
   font-family: sans-serif;
-  background: var(--grey);  
+  background: var(--white);  
   box-sizing: border-box;
   height: 100%;
   color: var(--black);
