--- a/src/brixit/static/css/forms-and-inputs.css
+++ b/src/brixit/static/css/forms-and-inputs.css
@@ -5,12 +5,12 @@
 .content textarea {
   background-color: rgba(var(--rgb-black), 0.1);
   border: none;
-  /* height: 2.5rem; */
   font-size: var(--base-font-size);
   line-height: 1.5;
   margin-bottom: 2rem;
   padding: 1rem;
 }
+
 .content textarea {
   min-height: 12em;
   resize: vertical;
@@ -20,13 +20,17 @@ input.danger {
     color: var(--red);
 }
 
+input[type='radio'] {
+    margin-right: 1rem;
+    /* display: none; */
+}
 
 input[type="submit"] {
     align-self: start;
     min-width: 10rem;
+    margin: 0 0 1.5rem 0;
     cursor: pointer;
     padding: 1rem;
-    /* height: 2.5rem; */
     font-weight: 700;
     transition: box-shadow 300ms ease-in-out;
   
@@ -37,7 +41,6 @@ input[type="submit"]:hover {
 
 /* FORMS */
 .content form {
-    margin: 1.5rem 0;
     display: flex;
     flex-direction: column;
 }
@@ -46,8 +49,26 @@ input[type="submit"]:hover {
     margin-bottom: 0.5rem;
 }
 
-
+.actions {
+    border-bottom: 1px solid var(--border-color);
+    padding-bottom: 1.5rem;
+    margin-bottom: 1.5rem;
+}
 .actions form {
     display: inline-block;
     margin-right: 2rem;
+}
+
+.search-results label {
+    border: 1px solid var( --border-color);
+    margin-bottom: 2rem;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+}
+.search-results label img {
+    margin-right: 1rem;
+}
+.search-results label a {
+    margin-left: 1rem;
 }
