Add more verbose logging to SQL functions and increase size of radio buttons

--- a/src/brixit/static/css/forms-and-inputs.css
+++ b/src/brixit/static/css/forms-and-inputs.css
@@ -72,3 +72,7 @@ input[type="submit"]:hover {
 .search-results label a {
     margin-left: 1rem;
 }
+
+input[type='radio'] {
+     transform: scale(2);
+ }
