--- a/src/brixit/static/css/base.css
+++ b/src/brixit/static/css/base.css
@@ -2,18 +2,21 @@
 
 /* VARIABLES */
 :root {
-  --grey: darkgray;
-  --light-grey: lightgray;
-	--black: rgb(49, 49, 49);
-  --blue: rgb(107,150,179);
-  --red: rgb(204,47,46);
+  --light-grey: #e9e9e9;
+	--black: #272727;
+  --blue: #70c5ff;
+  --yellow: #ffc706;
+  --red: #d02012;
   --white: white;
 
-  --rgb-black: 49,49,49;
-  --border-color: var(--grey);
+  --rgb-black: 39, 39, 39;
 
-	--base-font-size: 30px;
-	/* --h1-font-size: */
+  --border-color: var(--light-grey);
+  --border-width: 0.4rem;
+
+	--base-font-size: 20px;
+  --transition: all 0.3s ease-in;
+  --default-margin: 1.5rem;
 
 }
 
@@ -34,7 +37,7 @@ body {
 h1 {
   font-family: 'Hammersmith One', sans-serif;
   font-size: 2.5rem;
-  color: var(--blue);
+  color: var(--yellow);
   margin: 1rem 0;
 }
 
@@ -44,13 +47,14 @@ p, a, label, button, input, span {
 }
 
 a {
-  color: var(--blue);
+  color: var(--yellow);
   text-decoration: none;
 }
 a:hover {
 	opacity: 0.7;
+  transition: var( --transition);
 }
 hr {
   border: none;
-  border-top: 1px solid var(--border-color);
+  border-top: var(--border-width) solid var(--border-color);
 }
