--- a/src/brixit/static/css/content.css
+++ b/src/brixit/static/css/content.css
@@ -1,28 +1,33 @@
 /* CONTENT */
 .content {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 0 1rem 1rem;
-  }
-  .content > header {
-    /* border-bottom: 1px solid var(--light-grey); */
-    display: flex;
-    align-items: flex-end;
-  }
-  .content > header h1 {
-    flex: auto;
-    margin: 1rem 0 0.25rem 0;
-  }
-  .content:last-child {
-    margin-bottom: 0;
-  }
-  
-  /* IMAGES */
-  .main img {
-    max-width: 300px;
-    max-height: 300px;
-    display: block;
-    margin: 1rem auto;
-  }
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 3rem 3rem;
+}
+
+.content > * > * {
+  margin-bottom: var(--default-margin);
+}
+
+.content > header {
+  /* border-bottom: 1px solid var(--light-grey); */
+  display: flex;
+  align-items: flex-end;
+}
+.content > header h1 {
+  flex: auto;
+  margin: var(--default-margin) 0 0.25rem 0;
+}
+.content:last-child {
+  margin-bottom: 0;
+}
+
+/* IMAGES */
+.main img {
+  max-width: 300px;
+  max-height: 300px;
+  display: block;
+  margin: var(--default-margin) auto;
+}
   
   
