--- a/src/brixit/static/css/flash.css
+++ b/src/brixit/static/css/flash.css
@@ -4,5 +4,5 @@
     margin: 1em 0;
     padding: 1em;
     background: #cae6f6;
-    border: 1px solid #377ba8;
+    border: 2px solid var(--yellow);
   }
