Add a help page, WIP

--- a/src/brixit/templates/base.html
+++ b/src/brixit/templates/base.html
@@ -8,10 +8,12 @@
 </head>
 
 <nav>
-  <h1>BriXit</h1>
+ <h1>BriXit</h1>
   <ul>
     {% if g.user %}
       <li><span>{{ g.user['username'] }}</span>
+      <li><a href="{{ url_for('labelling.labelling') }}">Labelling</a>
+      <li><a href="{{ url_for('help') }}">Help</a>
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
     {% else %}
       <li><a href="{{ url_for('auth.register') }}">Register</a>
