--- a/src/brixit/templates/auth/login.html
+++ b/src/brixit/templates/auth/login.html
@@ -12,6 +12,6 @@
     <input type="text" name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+    <button type="submit" value="Log In">Log In</button>
   </form>
 {% endblock %}
