--- a/src/brixit/templates/auth/register.html
+++ b/src/brixit/templates/auth/register.html
@@ -14,6 +14,6 @@
     <input type="password" name="password" id="password" required>
     <label for="serialKey">Serial Key</label>
     <input type="text" name="serialKey" id="serialKey" required>
-    <input type="submit" value="Register">
+    <button type="submit" value="Register">Register</button>
   </form>
 {% endblock %}
