--- a/src/brixit/templates/help.html
+++ b/src/brixit/templates/help.html
@@ -3,37 +3,41 @@
 {% block content %}
 <body>
 
-<h1>How to use BriXit</h1>
+    <h1>How to use BriXit</h1>
 
-The image at the top of the page is a picture of a lego part taken from my conveyor belt.
-<img src="{{ url_for('labelling.GetStaticImage', staticImg='help_main_screen.png') }}">
+    <section id="basics">
+        <h2>Basics</h2>
+        <p>The image at the top of the page is a picture of a lego part taken from my conveyor belt.</p>
+        <img src="{{ url_for('labelling.GetStaticImage', staticImg='help_main_screen.png') }}">
+    </section>
 
+    <section id="shorthand">
+        <h2>Shorthand</h2>
+        <ul>
+            <li><strong>mod:</strong> modified</li>
+            <li><strong>minifig:</strong> minifigure</li>
+            <li><strong>cheese wedge:</strong> slope 30</li>
+            <li><strong>snot:</strong> studs on side</li>
+            <li><strong>slur:</strong> rock panel</li>
+            <li><strong>burp:</strong> rock panel</li>
+            <li><strong>lurp:</strong> rock panel</li>
+            <li><strong>tech:</strong> technic</li>
+        </ul>
+    </section>
+    <section id="multi">
+        <h2>Multi-dimensional parts</h2>
 
+        <h3>Difficult parts</h3>
 
-Shorthand:
+        <figure class="part">
+            <img src="http://img.bricklink.com/ItemImage/PL/47456.png">
+            <figcaption>Slope, Curved 3 x 2 x 2/3 with Two Studs, Wing End</figcaption>
+        </figure>
+        <figure class="part">
+            <img src="https://img.bricklink.com/ItemImage/PN/85/52501.png">
+            <figcaption>Slope, Inverted 45 6 x 1 Double with 1 x 4 Cutout</figcaption>
+        </figure>
 
-    "mod" : "modified",
-    "minifig" : "minifigure",
-    "cheese wedge" : "slope 30",
-    "snot" : "studs on side",
-    "slur" : "rock panel",
-    "burp" : "rock panel",
-    "lurp" : "rock panel",
-    "tech" : "technic"
-
-Multi-dimensional parts
-
-# Difficult parts
-
-Slope, Curved 3 x 2 x 2/3 with Two Studs, Wing End
-
-<img src="http://img.bricklink.com/ItemImage/PL/47456.png">
-
----
-
-Slope, Inverted 45 6 x 1 Double with 1 x 4 Cutout
-
-<img src="https://img.bricklink.com/ItemImage/PN/85/52501.png">
-
+    </section>
 </body>
 {% endblock %}
