--- a/src/brixit/templates/labelling/labelling.html
+++ b/src/brixit/templates/labelling/labelling.html
@@ -15,7 +15,7 @@
     {% endif %}
 
     <!--  Search Button  -->
-    <label for="query">Search for a part:</label>
+    <label for="query">Which part is this?</label>
     <form method="post" class="search-field">
         <input type="search" name="query" id="query" value="" placeholder="e.g. Brick 2x4" autofocus required>
         <button type="submit" value="Search">Search</button>
