--- a/src/brixit/static/scss/variables.scss
+++ b/src/brixit/static/scss/variables.scss
@@ -9,7 +9,7 @@ $base-font-size: 18px;
 // COLOURS
 $light-grey: #e9e9e9;
 $black: #272727;
-$blue: #70c5ff;
+$blue: #5472d9;
 $yellow: #ffc706;
 $red: #d02012;
 $white: #fff;
