--- a/src/brixit/templates/base.html
+++ b/src/brixit/templates/base.html
@@ -8,11 +8,11 @@
 </head>
 <header>
   <nav>
-  <h1>BriXit</h1>
+    <a href="{{ url_for('labelling.labelling') }}"><h1>BriXit</h1></a>
     <ul>
       {% if g.user %}
         <li><span>{{ g.user['username'] }}</span></li>
-        <li><a href="{{ url_for('labelling.labelling') }}">Labelling</a></li>
+        <li></li>
         <li>
           <a href="{{ url_for('help') }}">
             <svg class="help-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve" fill="#ffc706">
