--- a/src/brixit/templates/help.html
+++ b/src/brixit/templates/help.html
@@ -19,8 +19,9 @@
             <li><strong>Conveyor Belt</strong> Pictures of the conveyor belt. Clean pictures with no visible parts or debris.</li>
             <li><strong>Bad Image</strong> The picture is cropped poorly, contains multiple parts, is too dark, or the part is not clearly visible.</li>
             <li><strong>Skip Part</strong> If the picture is good, but you cannot find a part by searching, skip this part and move on.</li>
-            <li><strong>Unknown Wheel</strong> If the picture is good, but it contains a wheel that you cannot identify</li>
+            <li><strong>Unknown Wheel</strong> If the picture is good, but it contains a wheel that you cannot identify. </li>
         </ul>
+        <p>If you're struggling to identify wheels/tires, <a href="http://wheels.sariel.pl/">this reference from Sariel</a> may be helpful.</p>
 
     </section>
     <section id="dimensions">
